--- a/Лабораторна робота 2 ООП (1 семестр)/Лабораторна робота 2 ООП (1 семестр).csproj
+++ b/Лабораторна робота 2 ООП (1 семестр)/Лабораторна робота 2 ООП (1 семестр).csproj
@@ -43,7 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="MatrixOperations.cs" />
+    <Compile Include="MatrixData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
